--- a/css/styles.css
+++ b/css/styles.css
@@ -27,3 +27,16 @@
 .register {
     height: 200px;
 }
+
+@media only screen and (max-width:768px) {
+    .course {
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    .course img {
+        width: 100%;
+    }
+}
