--- a/css/styles.css
+++ b/css/styles.css
@@ -39,4 +39,11 @@
     .course img {
         width: 100%;
     }
+
+    .registration {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        padding: 20px 10px;
+    }
 }
